增加基础数据的转换绑定 增加tellist的prod properties pom.xml依赖pom的时候增加type标签

--- a/itopener-parent/itopener-tellist-parent/itopener-tellist-view/src/main/resources/static/views/dept.html
+++ b/itopener-parent/itopener-tellist-parent/itopener-tellist-view/src/main/resources/static/views/dept.html
@@ -3,7 +3,7 @@
 		<strong class="am-text-primary am-text-lg">通讯录管理</strong> / <small>分部管理</small>
 	</div>
 	<div class="am-fr am-cf">
-		<button type="button" id="refreshBtn" class="am-btn am-btn-xs am-btn-primary"><i class="am-icon-refresh"></i>&nbsp;刷新分部数据</button>
+		<button type="button" id="refreshBtn" class="am-btn am-btn-xs am-btn-primary"><i class="am-icon-refresh"></i>&nbsp;刷新</button>
 	</div>
 </div>
 <hr class="am-margin-xs"/>
@@ -45,9 +45,9 @@
 
 		<div class="am-form-group am-form-group-sm am-margin-bottom-xs">
 			<div class="am-u-sm-9 am-u-sm-offset-3">
-				<button type="button" id="saveBtn" class="am-btn am-btn-sm am-btn-primary">保存</button>
-				<button type="reset" id="resetBtn" class="am-btn am-btn-sm am-btn-primary">清空</button>
-				<button type="button" id="deleteBtn" class="am-btn am-btn-sm am-btn-primary">删除</button>
+				<button type="button" id="saveBtn" class="am-btn am-btn-sm am-btn-primary"><i class="am-icon-save"></i>&nbsp;保存</button>
+				<button type="reset" id="resetBtn" class="am-btn am-btn-sm am-btn-primary"><i class="am-icon-undo"></i>&nbsp;清空</button>
+				<button type="button" id="deleteBtn" class="am-btn am-btn-sm am-btn-primary"><i class="am-icon-trash-o"></i>&nbsp;删除</button>
 			</div>
 		</div>
 	</form>
