--- a/itopener-parent/itopener-tellist-parent/itopener-tellist-view/src/main/resources/static/views/tellistindex.html
+++ b/itopener-parent/itopener-tellist-parent/itopener-tellist-view/src/main/resources/static/views/tellistindex.html
@@ -138,11 +138,11 @@
 					icon: 'fa-tachometer',
 					url: 'views/dept.html'
 				});
-				menus.push({
-					name: '超级管理员',
-					icon: 'fa-tachometer',
-					url: 'views/manager.html'
-				});
+// 				menus.push({
+// 					name: '超级管理员',
+// 					icon: 'fa-tachometer',
+// 					url: 'views/manager.html'
+// 				});
 			}
 			return menus;
 		}
