修改tms日志文件位置和名称\n调整菜单

--- a/itopener-parent/itopener-tms-parent/itopener-tms-view/src/main/resources/static/res/amazeui/css/admin.css
+++ b/itopener-parent/itopener-tms-parent/itopener-tms-view/src/main/resources/static/res/amazeui/css/admin.css
@@ -76,7 +76,7 @@ ul {
 	margin-bottom: 0;
 	box-shadow: 0 16px 8px -15px #e2e2e2 inset;
 	background: #ececec;
-/*	padding-left: 10px; */
+	padding-left: 15px;
 }
 
 .admin-sidebar-sub li:first-child {
