--- a/itopener-parent/itopener-tms-parent/itopener-tms-view/src/main/resources/static/views/home.html
+++ b/itopener-parent/itopener-tms-parent/itopener-tms-view/src/main/resources/static/views/home.html
@@ -1,34 +1,34 @@
 <div class="am-cf am-padding-xs">
 	<div class="am-fl am-cf">
-		<strong class="am-text-primary am-text-lg">redis管理工具</strong> / <small>首页</small>
+		<strong class="am-text-primary am-text-lg">运输管理系统</strong> / <small>首页</small>
 	</div>
 </div>
 <ul class="am-avg-sm-1 am-avg-md-4 am-margin-xs am-padding-xs am-text-center admin-content-list ">
 	<li>
 		<a href="javascript:void(0);" class="am-text-success">
 			<span class="am-icon-btn am-icon-user"></span><br />
-			key数量<br />
+			今日运单数<br />
 			<span id="keySize"></span>
 		</a>
 	</li>
 	<li>
 		<a href="javascript:void(0);" class="am-text-warning">
 			<span class="am-icon-btn am-icon-briefcase"></span><br />
-			客户端数量<br />
+			运单总数<br />
 			<span id="clientSize"></span>
 		</a>
 	</li>
 	<li>
 		<a href="javascript:void(0);" class="am-text-danger">
 			<span class="am-icon-btn am-icon-recycle"></span><br />
-			master数量<br />
+			客户数<br />
 			<span id="masterSize"></span>
 		</a>
 	</li>
 	<li>
 		<a href="javascript:void(0);" class="am-text-secondary">
 			<span class="am-icon-btn am-icon-user-md"></span><br />
-			slave数量<br />
+			总运费<br />
 			<span id="slaveSize"></span>
 		</a>
 	</li>
@@ -43,7 +43,7 @@
 				<ul class="am-list admin-content-task">
 					<li>
 						<div class="admin-task-meta">2017-05-12 17:35:23 admin</div>
-						<div class="admin-task-bd">v1.0试用</div>
+						<div class="admin-task-bd">v1.0.0版本</div>
 					</li>
 				</ul>
 			</div>
