调整zuul route admin，使db、zk、redis三者可以根据需要进行配置使用，不使用的不需要配置

--- a/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin-view/src/main/resources/static/views/home.html
+++ b/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin-view/src/main/resources/static/views/home.html
@@ -52,7 +52,7 @@
 			dataType: 'json',
 			success: function(data){
 				$('.countView').each(function(){
-					$(this).text(data[$(this).attr('id')]);
+					$(this).text(data[$(this).attr('id')] || '暂不支持');
 				});
 			}
 		});
